--- a/index.html
+++ b/index.html
@@ -1,2 +1,4 @@
 <script src='note-model.js'></script>
 <script src='notes-tests.js'></script>
+<script src='note-list-model.js'></script>
+<script src='note-list-tests.js'></script>
