--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<script src='assert.js'></script>
 <script src='note-model.js'></script>
 <script src='note-tests.js'></script>
 <script src='note-list-model.js'></script>
