--- a/index.html
+++ b/index.html
@@ -3,3 +3,5 @@
 <script src='note-tests.js'></script>
 <script src='note-list-model.js'></script>
 <script src='note-list-tests.js'></script>
+<script src='note-list-view.js'></script>
+<script src='note-list-view-tests.js'></script>
