--- a/index.html
+++ b/index.html
@@ -1,7 +1,21 @@
-<script src='assert.js'></script>
-<script src='note-model.js'></script>
-<script src='note-tests.js'></script>
-<script src='note-list-model.js'></script>
-<script src='note-list-tests.js'></script>
-<script src='note-list-view.js'></script>
-<script src='note-list-view-tests.js'></script>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <link rel="shortcut icon" href="#">
+    <meta charset="utf-8">
+    <title>title</title>
+    <script src='assert.js'></script>
+    <script src='note-model.js'></script>
+    <script src='note-tests.js'></script>
+    <script src='note-list-model.js'></script>
+    <script src='note-list-tests.js'></script>
+    <script src='note-list-view.js'></script>
+    <script src='note-list-view-tests.js'></script>
+
+  </head>
+  <div id="app">
+    hello
+  </div>
+  <script src='note-controller.js'></script>
+  <script src='note-controller-tests.js'></script>
+</html>
