--- a/index.html
+++ b/index.html
@@ -18,4 +18,6 @@
   </div>
   <script src='note-controller.js'></script>
   <script src='note-controller-tests.js'></script>
+  <script src='single-note-view.js'></script>
+  <script src='single-note-view-tests.js'></script>
 </html>
