--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -6,12 +6,19 @@
     <title>title</title>
     <script src='assert.js'></script>
     <script src='note-model.js'></script>
+    <script src='note-tests.js'></script>
     <script src='note-list-model.js'></script>
+    <script src='note-list-tests.js'></script>
     <script src='note-list-view.js'></script>
+    <script src='note-list-view-tests.js'></script>
+
   </head>
   <div id="app">
     hello
   </div>
   <script src='single-note-view.js'></script>
+  <script src='single-note-view-tests.js'></script>
   <script src='note-controller.js'></script>
+  <script src='note-controller-tests.js'></script>
+  
 </html>
