--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -11,14 +11,23 @@
     <script src='note-list-tests.js'></script>
     <script src='note-list-view.js'></script>
     <script src='note-list-view-tests.js'></script>
+    <script src='note-controller.js'></script>
+    <script src='note-display.js'></script>
+    <script src='note-display-tests.js'></script>
 
   </head>
   <div id="app">
     hello
   </div>
+  <form id="text" name="text" action="#notes/" method = "post">
+    <input type="text"> 
+    <input type="submit" name="Create Note" value="Create Note">
+  </form>
+  <textarea id = "textfield" name="text" form="text" placeholder="Enter New Note..."></textarea>
+
   <script src='single-note-view.js'></script>
   <script src='single-note-view-tests.js'></script>
-  <script src='note-controller.js'></script>
+
   <script src='note-controller-tests.js'></script>
   
 </html>
