--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -4,17 +4,6 @@
     <link rel="shortcut icon" href="#">
     <meta charset="utf-8">
     <title>title</title>
-    <script src='assert.js'></script>
-    <script src='note-model.js'></script>
-    <script src='note-tests.js'></script>
-    <script src='note-list-model.js'></script>
-    <script src='note-list-tests.js'></script>
-    <script src='note-list-view.js'></script>
-    <script src='note-list-view-tests.js'></script>
-    <script src='note-controller.js'></script>
-    <script src='note-display.js'></script>
-    <script src='note-display-tests.js'></script>
-
   </head>
   <div id="app">
     hello
@@ -24,10 +13,20 @@
     <input type="submit" name="Create Note" value="Create Note">
   </form>
   <textarea id = "textfield" name="text" form="text" placeholder="Enter New Note..."></textarea>
-
+  <script src='assert.js'></script>
+  <script src='note-model.js'></script>
+  <script src='note-tests.js'></script>
+  <script src='note-list-model.js'></script>
+  <script src='note-list-tests.js'></script>
+  <script src='note-list-view.js'></script>
+  <script src='note-list-view-tests.js'></script>
+  
   <script src='single-note-view.js'></script>
   <script src='single-note-view-tests.js'></script>
-
+  <script src='note-display.js'></script>
+  <script src='note-controller.js'></script>
   <script src='note-controller-tests.js'></script>
-  
+  <script src='note-display-tests.js'></script>
+  <script src='note-add.js'></script>
+  <script src='note-add-tests.js'></script>
 </html>
